# os-next

./: .gitignore  Cargo.toml  README.md
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
apps/menu/: Cargo.toml
bench/: README.md
examples/ipc/client/: Cargo.toml
examples/ipc/client/src/: main.rs
examples/ipc/server/: Cargo.toml
examples/ipc/server/src/: main.rs
framework/webview/: Cargo.toml  main.rs
framework/webview/src/: main.rs
scripts/: README.md
web/desktop-ui/: Cargo.toml  Trunk.toml  index.html
web/desktop-ui/src/: main.rs
