[package]
name = "desktop"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.14"
gtk = "0.14"
gio = "0.14"
webkit2gtk = { version = "0.14", features = ["v2_26"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "*"
actix-rt = "*"
mime_guess = "*"
rust-embed = "5.9.0"