[package]
name = "desktop-ui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
log = "0.4.14"
sycamore = "0.5.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.26"
js-sys = "0.3.53"
futures = "0.3"
[dependencies.web-sys]
features = ["HtmlInputElement", "InputEvent"]
version = "0.3"